--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Jornada Viagens</title>
   </head>
-  <body></body>
+  <body>
+    <h1>TESTE DE CORES</h1>
+  </body>
 </html>
