adiciona variabveis de texto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Jornada Viagens</title>
   </head>
-  <body>
-    <h1>TESTE DE CORES</h1>
-  </body>
+  <body></body>
+  g
 </html>
