--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html" title="voltar para a pagina inicial">
+      <a class="logo" href="index.html" title="voltar para a pagina inicial">
         <img src="img/bussola-jornada-branco.png" alt="busola do logo Jornada Viagens na cor preta " />
       </a>
       <img src="img/menu.png" alt="menu" />
